--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <body>
     <h1>Hello, World</h1>
     <p>
-    Welcome to my webpage. This 
-    web page is a demonstration of
-    HTML.
+    Alberto is an idiot lol 
     </p>
     <img src="tree.png" alt="Christmas Tree">
   </head>
