--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body>
     <h1>Hello, World</h1>
     <p>
-    Alberto is an idiot lol 
+      I love Coffee!
+      Coffee is my favorite drink.
+      Here are some different types.
     </p>
     <img src="tree.png" alt="Christmas Tree">
   </head>
