--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Example Web Page</title>
   </head>
   <body>
-    <h1>Hello, World</h1>
+    <h1>Coffee Drinker2001's Blog</h1>
     <p>
       I love Coffee!
       Coffee is my favorite drink.
