--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
       <title>Example Web Page</title>
   </head>
   <body>
-    <h1>Coffee Drinker2001's Blog</h1>
+    <h1>CoffeeDrinker2001's Blog</h1>
     <p>
       I love Coffee!
       Coffee is my favorite drink.
       Here are some different types.
     </p>
-    <img src="tree.png" alt="Christmas Tree">
+      <img src="boring.jfif" alt="Black Coffee">
+    <p>
+      This is boring,
+      pretentious coffee. Also
+      known as: Black Coffee, or, 
+      an Americano.
+    </p>
+    
   </head>
 <body>
