--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Coffee is my favorite drink.
       Here are some different types.
     </p>
-      <img src="boring.jpeg" alt="Black Coffee">
+      <img src="coffee.png" alt="Black Coffee">
     
     
   </head>
