--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       Coffee is my favorite drink.
       Here are some different types.
     </p>
-      <img src="coffee.png" alt="Black Coffee">
-    
+      <img src="black.jfif" alt="Black Coffee">
+    <p>
+      This is pretentious coffee.
+      AKA: Black.
+    </p>
     
   </head>
 <body>
