--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       This is pretentious coffee.
       AKA: Black.
     </p>
-    
+     <img src="mocha.jfif" alt="Black Coffee">
+    <p>
+      This is the coffee version of your one mixed friend.
+      It's creamy. 
+      AKA: Mocha.
+    </p>
   </head>
 <body>
