--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
      <img src="mocha.jfif" alt="Black Coffee">
     <p>
-      This is the coffee version of your one mixed friend.
+      This is your chocolate friend.
       It's creamy. 
       AKA: Mocha.
     </p>
