--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
       It's creamy. 
       AKA: Mocha.
     </p>
+     <img src="milkbean.jfif" alt="Black Coffee">
+    <p>
+      This is milk bean coffee. It is mostly milk.
+      This is your lactose intolerant boyfriend's
+      worst enemy. AKA: Latte.
+    </p>
   </head>
 <body>
