--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
       <title>Example Web Page</title>
   </head>
   <body>
+    <font face = "Comic Sans MS" color = "pink">
+    <center>
     <h1>CoffeeDrinker2001's Blog</h1>
     <p>
       I love Coffee!
@@ -31,5 +33,6 @@
     <p>
       This latte is green. Why? Screw you.
     </p>
+      </font>
   </head>
 <body>
