changed font and color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
       <title>Example Web Page</title>
   </head>
   <body>
+     <font face = "Comic Sans MS" color = "purple">
+	 <center>
     <h1>CoffeeDrinker2001's Blog</h1>
     <p>
       I love Coffee!
@@ -15,21 +17,22 @@
       This is pretentious coffee.
       AKA: Black.
     </p>
-     <img src="mocha.jfif" alt="Black Coffee">
+     <img src="mocha.jfif" alt="Mocha">
     <p>
       This is your chocolate friend.
       It's creamy. 
       AKA: Mocha.
     </p>
-     <img src="milkbean.jfif" alt="Black Coffee">
+     <img src="milkbean.jfif" alt="Latte">
     <p>
       This is milk bean coffee. It is mostly milk.
       This is your lactose intolerant boyfriend's
       worst enemy. AKA: Latte.
     </p>
-      <img src="matcha.jfif" alt="Black Coffee">
+      <img src="matcha.jfif" alt="Matcha">
     <p>
-      This latte is green. Why? Screw you.
+      This latte is green. Why? Why not. AKA: Matcha.
     </p>
+	</font>
   </head>
 <body>
