--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <title>Example Web Page</title>
   </head>
-  <body>
+  <body style = "background-color:pink;">
      <font face = "Comic Sans MS" color = "purple">
 	 <center>
     <h1>CoffeeDrinker2001's Blog</h1>
@@ -34,6 +34,9 @@
       This latte is green. Why? Why not. AKA: Matcha.
     </p>
 
+		<a href="https://en.wikipedia.org/wiki/Coffee">
+		<button type = "button" onCLick =link(https://en.wikipedia.org/wiki/Coffee)> Learn More? </button>
+		</a>
 	</font>
 
 
