--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Example Web Page</title>
   </head>
   <body style = "background-color:pink;">
-     <font face = "Comic Sans MS" color = "purple">
+     <font-family: "Comic Sans MS", cursive, sans-serif; color = "purple">
 	 <center>
     <h1>CoffeeDrinker2001's Blog</h1>
     <p>
@@ -37,7 +37,7 @@
 		<a href="https://en.wikipedia.org/wiki/Coffee">
 		<button type = "button" onCLick =link(https://en.wikipedia.org/wiki/Coffee)> Learn More? </button>
 		</a>
-	</font>
+	
 
 
   </head>
