--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
       <title>Example Web Page</title>
   </head>
   <body style = "background-color:pink;">
-     <font-family: "Comic Sans MS", cursive, sans-serif; color = "purple">
+p  {
+    color: purple;
+    font-family: Comic Sans MS;
+}
 	 <center>
     <h1>CoffeeDrinker2001's Blog</h1>
     <p>
@@ -40,5 +43,5 @@
 	
 
 
-  </head>
-<body>
+
+
