--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
       <title>Example Web Page</title>
   </head>
   <body style = "background-color:pink;">
+	  <style>
 p  {
     color: purple;
     font-family: Comic Sans MS;
 }
+	  </style>
 	 <center>
     <h1>CoffeeDrinker2001's Blog</h1>
     <p>
