--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	  <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <body style = "background-color:pink;">
-	 <center>
     <h1>CoffeeDrinker2001's Blog</h1>
     <p>
       I love Coffee!
@@ -33,12 +32,5 @@
     <p>
       This latte is green. Why? Why not. AKA: Matcha.
     </p>
-
-		<a href="https://en.wikipedia.org/wiki/Coffee">
-		<button type = "button" onCLick =link(https://en.wikipedia.org/wiki/Coffee)> Learn More? </button>
-		</a>
-	
-
-
-
-
+		< href="https://en.wikipedia.org/wiki/Coffee">
+		<button type = "button" onCLick =link(https://en.wikipedia.org/wiki/Coffee)> Learn More? </button>	
