--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <p>
       This latte is green. Why? Why not. AKA: Matcha.
     </p>
-	  < a href=https://en.wikipedia.org/wiki/Coffee > </a>
+	  <a href=https://en.wikipedia.org/wiki/Coffee > 
 	<button type = "button" onCLick =link(https://en.wikipedia.org/wiki/Coffee)> Learn More? </button>	
+	</a>
