--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Example Web Page</title>
-	  <link rel="stylesheet" type="text/css" href="mystyle.css">
+      <title>The Coffee Catalog</title>
+	  <link rel="stylesheet" type="text/css" href= "mystyle.css">
   </head>
-  <body style = "background-color:pink;">
     <h1>CoffeeDrinker2001's Blog</h1>
+	<img src="coffee.png" id= "cimg" alt="Black Coffee">
+	 <a href=https://www.google.com/search?q=coffee+near+me&oq=coffee+near+me&aqs=chrome..69i57j0l5.4343j0j7&sourceid=chrome&ie=UTF-8 > 
+	<button type = "button" id="button" onCLick =linkhttps://www.google.com/search?q=coffee+near+me&oq=coffee+near+me&aqs=chrome..69i57j0l5.4343j0j7&sourceid=chrome&ie=UTF-8> Coffee Near me! </button>	
+     </a>
     <p>
       I love Coffee!
       Coffee is my favorite drink.
       Here are some different types.
     </p>
-      <img src="black.jfif" alt="Black Coffee">
+      <img src="black.jfif" id="bimg" alt="Black Coffee">
     <p>
       This is pretentious coffee.
       AKA: Black.
     </p>
-     <img src="mocha.jfif" alt="Mocha">
+     <img src="mocha.jfif" id="mimg" alt="Mocha">
     <p>
       This is your chocolate friend.
       It's creamy. 
       AKA: Mocha.
     </p>
-     <img src="milkbean.jfif" alt="Latte">
+     <img src="milkbean.jfif" id="limg" alt="Latte">
     <p>
       This is milk bean coffee. It is mostly milk.
       This is your lactose intolerant boyfriend's
       worst enemy. AKA: Latte.
     </p>
-      <img src="matcha.jfif" alt="Matcha">
+      <img src="matcha.jfif" id= "mlimg" alt="Matcha">
     <p>
       This latte is green. Why? Why not. AKA: Matcha.
     </p>
-	  <a href=https://en.wikipedia.org/wiki/Coffee > 
+		 <a href=https://en.wikipedia.org/wiki/Coffee > 
 	<button type = "button" onCLick =link(https://en.wikipedia.org/wiki/Coffee)> Learn More? </button>	
-	</a>
+		</a>
